--- a/ui/package.json
+++ b/ui/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "craco-alias": "^3.0.1"
+    "craco-alias": "^3.0.1",
+    "tailwindcss": "^3.3.3"
   }
 }
