--- a/ui/tsconfig.paths.json
+++ b/ui/tsconfig.paths.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
       "@services/*" : ["src/services/*"],
       "@store/*" : ["src/store/*"],
       "@styles/*": ["src/styles/*"],
